# dota2_skill

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DEVLOG_2026-06-07.md  IMPLEMENTATION_PLAN.md  README.md  SKILL_TESTER_PLAN.md  TESTING.md  TODO.md
.github/workflows/: build-examples.yml  build-game.yml
client/: CLIENT_COMPLETED.md  CMakeLists.txt  README.md
client/include/client/: game_state.hpp  input_handler.hpp  network_client.hpp  renderer.hpp
client/src/: game_state.cpp  input_handler.cpp  main.cpp  network_client.cpp  renderer.cpp
data/abilities/: drow_ranger_frost_arrows.yaml  earthshaker_fissure.yaml  juggernaut_blade_fury.yaml  juggernaut_healing_ward.yaml  juggernaut_omnislash.yaml  lina_dragon_slave.yaml  lina_fiery_soul.yaml  lina_laguna_blade.yaml  lina_light_strike_array.yaml  lion_earth_spike.yaml  lion_finger_of_death.yaml  lion_hex.yaml  luna_lunar_blessing.yaml  luna_moon_glaive.yaml  obsidian_destroyer_arcane_orb.yaml  pudge_dismember.yaml  pudge_meat_hook.yaml  sven_great_cleave.yaml  sven_storm_hammer.yaml  test_orb_slow.yaml  viper_poison_attack.yaml
data/heroes/: drow_ranger.yaml  earthshaker.yaml  juggernaut.yaml  lina.yaml  lion.yaml  luna.yaml  obsidian_destroyer.yaml  pudge.yaml  sven.yaml  viper.yaml
data/scripts/abilities/: earthshaker_fissure.lua  juggernaut_blade_fury.lua  juggernaut_healing_ward.lua  juggernaut_omnislash.lua  lina_dragon_slave.lua  lina_fiery_soul.lua  lina_laguna_blade.lua  lina_light_strike_array.lua  lion_finger_of_death.lua  pudge_dismember.lua  pudge_meat_hook.lua  sven_storm_hammer.lua  test_broken.lua
data/scripts/modifiers/: modifier_drow_ranger_frost_arrows.lua  modifier_earthshaker_fissure_blocker.lua  modifier_lina_fiery_soul.lua  modifier_luna_lunar_blessing.lua  modifier_luna_moon_glaive.lua  modifier_obsidian_destroyer_arcane_orb.lua  modifier_pudge_hook_drag.lua  modifier_sven_great_cleave.lua  modifier_test_aoe_thinker.lua  modifier_test_bonus_damage.lua  modifier_test_dot.lua  modifier_test_evasion.lua  modifier_test_orb_slow.lua  modifier_test_shield.lua  modifier_viper_poison_attack.lua
doc/: development.md  recording_schema.md  skill_tester_modifier_catalog_plan.md
examples/: duel.cpp  duel_visual.cpp  skill_tester.cpp  visual_common.hpp
examples/hero_workshop/: ability_panel.cpp  ability_panel.hpp  hero_panel.cpp  hero_panel.hpp  main.cpp  modifier_panel.cpp  modifier_panel.hpp
examples/pathfinding_demo/: main.cpp
examples/skill_tester/: aim.cpp  aim.hpp  app_state.hpp  input.cpp  input.hpp  main.cpp  modifier_catalog.cpp  modifier_catalog.hpp  panels.cpp  panels.hpp  render_helpers.hpp  scene.cpp  scene.hpp  ui_labels.hpp  waypoints.cpp  waypoints.hpp
include/dota/ability/: ability.hpp  behavior.hpp  datadriven.hpp  manager.hpp  registry.hpp  scripted.hpp
include/dota/combat/: damage.hpp
include/dota/core/: attack.hpp  event_bus.hpp  order.hpp  random.hpp  types.hpp  unit.hpp  world.hpp
include/dota/log/: combat_log.hpp
scripts/abilities/: earthshaker_fissure.lua  juggernaut_blade_fury.lua  juggernaut_healing_ward.lua  juggernaut_omnislash.lua  lina_dragon_slave.lua  lina_fiery_soul.lua  lina_laguna_blade.lua  lina_light_strike_array.lua  lion_finger_of_death.lua  pudge_dismember.lua
scripts/modifiers/: modifier_earthshaker_fissure_blocker.lua  modifier_test_aoe_thinker.lua  modifier_test_shield.lua
server/: CMakeLists.txt  DESIGN_SUMMARY.md  PROGRESS.md  QUICKSTART.md  README.md  STAGE1_COMPLETED.md  STAGE2_COMPLETED.md  STAGE3_COMPLETED.md  STAGE5_COMPLETED.md  STATUS.md
server/config/: server.yaml
server/include/server/mode/: experience_system.hpp  skill_pool.hpp  survivor_mode.hpp  wave_spawner.hpp
server/include/server/network/: kcp_session.hpp  message_handler.hpp  server_network.hpp
server/include/server/server/: game_server.hpp  game_server_handler.hpp  game_session.hpp  player_state.hpp
server/proto/: CMakeLists.txt  common.proto  messages.proto
server/src/: main.cpp
server/src/mode/: experience_system.cpp  skill_pool.cpp  survivor_mode.cpp  wave_spawner.cpp
server/src/network/: kcp_session.cpp  message_handler.cpp  server_network.cpp
server/src/server/: game_server.cpp  game_server_handler.cpp  game_session.cpp  player_state.cpp
server/test/: CMakeLists.txt  test_kcp_session.cpp  test_protobuf_serialization.cpp
server/tools/: simple_client.cpp  stress_test_client.cpp
src/ability/: ability.cpp  behavior_parse.cpp  datadriven.cpp  manager.cpp  registry.cpp  scripted.cpp
src/combat/: damage.cpp
src/core/: event_bus.cpp  unit.cpp  world.cpp
src/log/: combat_log.cpp
src/modifier/: manager.cpp  modifier.cpp  registry.cpp  scripted.cpp
src/pathfinding/: nav_grid.cpp  shape_cast.cpp  wall_tracer.cpp
src/projectile/: manager.cpp  projectile.cpp
src/replay/: player.cpp  recorder.cpp
src/script/: bindings.cpp  lua_state.cpp
src/tools/: ability_doc.cpp  ability_ops.cpp  hero_catalog.cpp  hero_ops.cpp  hero_writer.cpp  modifier_ops.cpp  modifier_scanner.cpp  trash.cpp
src/visual/: raygui_impl.c
tests/: test_ability_lifecycle.cpp  test_ability_ops.cpp  test_ability_registry_dir.cpp  test_attack_bonus_damage.cpp  test_attack_orb.cpp  test_attack_projectile_name.cpp  test_attack_record.cpp  test_combat_log.cpp  test_damage_pipeline.cpp  test_datadriven_loader.cpp  test_event_bus.cpp  test_event_emission.cpp  test_heal_pipeline.cpp  test_hero_catalog.cpp  test_hero_drow_ranger.cpp  test_hero_earthshaker.cpp  test_hero_juggernaut.cpp  test_hero_lina.cpp  test_hero_lion.cpp  test_hero_luna.cpp  test_hero_luna_moon_glaive.cpp  test_hero_obsidian_destroyer.cpp  test_hero_ops.cpp  test_hero_pudge.cpp  test_hero_sven.cpp  test_hero_sven_cleave.cpp  test_hero_viper.cpp  test_hero_writer.cpp  test_lion_earth_spike.cpp  test_lua_ability.cpp  test_lua_bindings.cpp  test_lua_error_safety.cpp  test_lua_modifier.cpp  test_lua_modifier_registry.cpp  test_modifier_event.cpp  test_modifier_lifecycle.cpp  test_modifier_on_ability_executed.cpp  test_modifier_ops.cpp  test_modifier_property.cpp  test_modifier_scanner.cpp  (+22 more)
(+24 files in other folders)
